Two Staged Model

--- a/notebooks/EDA/cold_start_old_test_users_EDA.ipynb
+++ b/notebooks/EDA/cold_start_old_test_users_EDA.ipynb
@@ -130,6 +130,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "761a321b-1251-4bf4-962f-c7011d9beaba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "last_status_timestamp\n",
+       "0     0.083069\n",
+       "1     0.087924\n",
+       "2     0.109138\n",
+       "3     0.167063\n",
+       "4     0.254904\n",
+       "5     0.357140\n",
+       "6     0.458948\n",
+       "7     0.549834\n",
+       "8     0.627306\n",
+       "9     0.690798\n",
+       "10    0.742152\n",
+       "11    0.783298\n",
+       "12    0.817007\n",
+       "13    0.844349\n",
+       "14    0.866941\n",
+       "15    0.886563\n",
+       "16    0.904054\n",
+       "17    0.920722\n",
+       "18    0.935534\n",
+       "19    0.947763\n",
+       "20    0.957392\n",
+       "21    0.964703\n",
+       "22    0.970367\n",
+       "23    0.974807\n",
+       "24    0.978307\n",
+       "25    0.981165\n",
+       "26    0.983470\n",
+       "27    0.985440\n",
+       "28    0.987088\n",
+       "29    0.988551\n",
+       "30    0.989825\n",
+       "31    0.990916\n",
+       "32    0.991849\n",
+       "33    0.992607\n",
+       "34    0.993301\n",
+       "35    0.993915\n",
+       "36    0.994467\n",
+       "37    0.994960\n",
+       "38    0.995389\n",
+       "39    0.995811\n",
+       "40    0.996170\n",
+       "41    0.996515\n",
+       "42    0.996803\n",
+       "43    0.997056\n",
+       "44    0.997279\n",
+       "45    0.997495\n",
+       "46    0.997681\n",
+       "47    0.997855\n",
+       "48    0.998015\n",
+       "49    0.998146\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.filter(pl.col('last_status') == 'canceled_orders').select((pl.col('last_status_timestamp') - pl.col('created_timestamp')).dt.total_days()).collect().to_pandas().last_status_timestamp.value_counts(normalize=True).sort_index().cumsum().head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "026b7618-27c6-4021-a34a-4fd679fd5b51",
    "metadata": {},
